# MapReduce-Framework

./: GAI.md  README.md  correct.txt  pyproject.toml  requirements.txt
mapreduce/: submit.py
mapreduce/manager/: __main__.py
mapreduce/worker/: __main__.py
tests/: test_check_submission_files.py  test_manager_02.py  test_manager_03.py  test_manager_05.py  test_style.py  test_worker_01.py  test_worker_02.py  test_worker_03.py  test_worker_04.py  test_worker_05.py  test_worker_07.py  test_worker_08.py  test_worker_11.py
tests/testdata/exec/: grep_map.py  grep_reduce.py  wc_reduce.py
tests/testdata/input_large_intermediate/: file01  file02  file03  file04
tests/utils/: __init__.py  memory.py
